--- a/markdown/w1.md
+++ b/markdown/w1.md
@@ -15,3 +15,5 @@ w1課程,登入 MS Online, 建立個人 Github 帳號, 以及利用 cmsimde_site
 上課時登入 MS Online, 目的是能在 MS Teams 中上課, 一邊觀看教學示範, 一邊自行操作.
 # Github 帳號
 自行建立 Github 帳號,用來建立並維護個人的課程倉儲與網站.
+# 課後心得
+第一堂的內容對我們來說不算太複雜，因為上學期剛上過，就當老師幫我們複習，當再一次聽課時就顯得相較簡單了，包刮Github及Replit的基本操作，以及創建網站。
