--- a/markdown/w2.md
+++ b/markdown/w2.md
@@ -1,5 +1,5 @@
 ---
-Title: WCM2024 W1課程內容
+Title: WCM2024 W2課程內容
 Date: 2024-06-15 13:27
 Category: w2
 Tags: 網誌編寫
@@ -11,4 +11,9 @@ Author: kmol
 
 <!-- PELICAN_END_SUMMARY -->
 
-# 利用 Codespaces 維護網站
+# 確認已建立個人網站
+1.登入 Github
+2.利用此連結https://github.com/mdecycu/cmsimde_site  "Create a new repository" 建立名稱為WCM2024的倉儲。
+在倉儲WCM2024的設定頁面中，點選Pages 中的 Branch 分支區域, 選擇將 main 分支存為網頁的 root 根目錄。
+等 wcm2024 的倉儲 Github Pages 轉檔完成後, 可以看到 commits 提交區的綠色勾勾, 就完成網址為 https://帳號.github.io/wcm2024 的個人課程網站
+# 利用Replit修改個人網站標題
