--- a/markdown/w2.md
+++ b/markdown/w2.md
@@ -13,7 +13,22 @@ Author: kmol
 
 # 確認已建立個人網站
 1.登入 Github
+
 2.利用此連結https://github.com/mdecycu/cmsimde_site  "Create a new repository" 建立名稱為WCM2024的倉儲。
-在倉儲WCM2024的設定頁面中，點選Pages 中的 Branch 分支區域, 選擇將 main 分支存為網頁的 root 根目錄。
-等 wcm2024 的倉儲 Github Pages 轉檔完成後, 可以看到 commits 提交區的綠色勾勾, 就完成網址為 https://帳號.github.io/wcm2024 的個人課程網站
+
+3.在倉儲WCM2024的設定頁面中，點選Pages 中的 Branch 分支區域, 選擇將 main 分支存為網頁的 root 根目錄。
+
+4.等 wcm2024 的倉儲 Github Pages 轉檔完成後, 可以看到 commits 提交區的綠色勾勾, 就完成網址為 https://CYA41223106.github.io/wcm2024 的個人課程網站
 # 利用Replit修改個人網站標題
+在 Replit 檢視動態網站或網誌推送到 Github 之前的內容, 必須要在動態與靜態模式中擇一使用.
+
+1.登入Replit
+
+2.進入個人網頁後,log in,將cmsimde_site選取後點擊Config更改標題,名稱為wcm2024 CYA41223106
+# 利用 Codespaces 維護網站
+使用 Github Codespaces 維護網站的好處是提供多終端機與多 ports 開啟功能
+能夠同時開啟靜態網站與動態網站
+# 心得
+W2的課程讓我學到很多新的東西以及複習舊知識
+新:能夠再Github中使用Codespace直接將動態網站上編輯好的東西push到靜態網站上，使用Codespace能夠同時查看到動態與靜態的變化，使我更加方便。
+舊:更改個人網站標題，在之前上學期的課程中有學習過
