--- a/markdown/w1.md
+++ b/markdown/w1.md
@@ -7,7 +7,7 @@ Slug: 2024-Spring-w1.-blog-tutorial
 Author: kmol
 ---
 
-w1課程,登入 MS Online, 建立個人 Github 帳號, 以及利用 cmsimde_site 作為 Template 建立個人課程網站.
+wcm2024第一週課程,登入 MS Online, 建立個人 Github 帳號, 以及利用 cmsimde_site 作為 Template 建立個人課程網站.
 
 <!-- PELICAN_END_SUMMARY -->
 
