--- a/markdown/w2.md
+++ b/markdown/w2.md
@@ -7,7 +7,7 @@ Slug: 2024-Spring-w2.-blog-tutorial
 Author: kmol
 ---
 
-四技 WCM 第二週課程, 利用 Github Codespaces 維護個人與分組網站.
+WCM2024第二週課程,利用 Github Codespaces 維護個人與分組網站.
 
 <!-- PELICAN_END_SUMMARY -->
 
