--- a/markdown/w6.md
+++ b/markdown/w6.md
@@ -7,7 +7,7 @@ Slug: 2024-Spring-w6.-blog-tutorial
 Author: kmol
 ---
 
-wcm2024第五週課，說明如何透過與 ChatGPT 的對話, 了解有關 git 在不同專業領域的應用方法
+wcm2024第六週課，說明如何透過與 ChatGPT 的對話, 了解有關 git 在不同專業領域的應用方法
 
 <!-- PELICAN_END_SUMMARY -->
 
