--- a/markdown/w11.md
+++ b/markdown/w11.md
@@ -16,6 +16,6 @@ Slug: 2024-Spring-w8.-blog-tutorial
 Author: kmol
 ---
 
-wcm2024第八週課，說明如何在網頁中加入 Brython 程式應用
+wcm2024第十一週課，說明如何在網頁中加入 Brython 程式應用
 
 <!-- PELICAN_END_SUMMARY -->
