修改 w13 blog page

--- a/markdown/w13.md
+++ b/markdown/w13.md
@@ -16,6 +16,7 @@ Slug: 2024-Spring-w8.-blog-tutorial
 Author: kmol
 ---
 
-wcm2024第八週課，從單機猜數字遊戲與 AI 應用談起
+wcm2024第十三週課，從單機猜數字遊戲與 AI 應用談起
 
 <!-- PELICAN_END_SUMMARY -->
+
