--- a/markdown/w13.md
+++ b/markdown/w13.md
@@ -11,3 +11,19 @@ wcm2024第十三週課，從單機猜數字遊戲與 AI 應用談起
 
 <!-- PELICAN_END_SUMMARY -->
 
+# 先看看 Linux
+在 Linux 設定全域 Proxy 伺服器的位置, 可以是 /etc/environment 檔案中的:
+
+http_proxy="http://your_proxy_server:port"
+
+https_proxy="http://your_proxy_server:port"
+
+# 猜猜看遊戲
+guess_game.7z 是在 AI 輔助下, 將簡單的單人 Brython 線上猜數字遊戲 轉化為可以多人同場比賽猜數字的線上遊戲.
+
+值得加入的功能:
+
+1.具有管理者模式, 可以重新啟動伺服器.
+2.可讓參賽者經由 Github、Gmail 或其他支援 Oauth2 登入協定的帳號登入.
+3.加入資料庫, 儲存參賽者的得分資料、歷史紀錄並提供排行榜等功能.
+4.加入其他可多人線上參與競技或進行同步對話功能, 或納入其他專業相關的協同設計功能.
