add w11 blog 內容

--- a/markdown/w11.md
+++ b/markdown/w11.md
@@ -11,3 +11,5 @@ wcm2024第十一週課，說明如何在網頁中加入 Brython 程式應用
 
 <!-- PELICAN_END_SUMMARY -->
 
+# 從教務主機直接擷取資料
+利用 wsgi_v1.py 可以取得結果: wsgi_v1_output.txt 表示可以利用 Flask 建置網站程式取下教務主機中的相關資料.
